[package]
name = "server"
version = "0.1.0"
authors = ["farbodpm <farbod.peimanzadeh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="*" , features = ["full"]}
crc = "2.0.0"
prost = { version = "0.8", default-features = false, features = ["prost-derive"] }
libm = "0.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
chrono = "*"
http = "*"